--- a/service.html
+++ b/service.html
@@ -61,26 +61,26 @@
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./">Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center active m-3" href="./service.html">Servicios</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./contact.html">Contacto</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="d-flex align-items-center ms-md-3">
-                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                    <a class="btn text-center px-0 mx-1"
                         style="width: 36px; height: 36px;" href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
                         <i class="fab fa-tiktok"></i>
                     </a>
-                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                    <a class="btn text-center px-0 mx-1"
                         style="width: 36px; height: 36px;" href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank" rel="noopener">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                    <a class="btn text-center px-0 mx-1"
                         style="width: 36px; height: 36px;" href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
                         <i class="fab fa-instagram"></i>
                     </a>
@@ -584,7 +584,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-secondary border back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <!-- <a href="#" class="btn btn-secondary border back-to-top"><i class="fa fa-angle-double-up"></i></a> -->
 
 
     <!-- JavaScript Libraries -->
