--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center active m-3" href="./">Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./service.html">Servicios</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./contact.html">Contacto</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="d-flex align-items-center ms-md-3">
                     <a class="btn text-center px-0 mx-1"
