--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Trivium Records - Profesionalmente Apasionados, Musicalmente Efectivos.</title>
+    <title>Trivium Records - Profesionalmente Apasionados, Musicalmente Efectivos</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta
         content="Trivium Records, producción musical, academia de música, representación artística, León, Gto, estudio de grabación, clases de música, DJ, eventos, conciertos, sello discográfico, booking, promoción musical, música en vivo, México"
@@ -12,8 +12,8 @@
         content="Trivium Records: producción musical, academia de música y representación artística en León, Gto. Profesionalmente apasionados, musicalmente efectivos."
         name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- Favicon dinámico según modo oscuro o claro -->
+    <link id="favicon" rel="icon" href="img/favicon-light.png" type="image/png">
 
     <!-- Google Fonts: Inter y Alumni Sans SC -->
     <link
@@ -40,17 +40,17 @@
 
 <body class="" style="background: #000000;">
 
-
-
     <!-- Pantalla de carga -->
-    <!-- <div id="preloader"
+    <div id="preloader"
         style="position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:#000;display:flex;align-items:center;justify-content:center;transition:opacity 0.7s cubic-bezier(.4,0,.2,1);opacity:1;">
-        <video id="loadingVideo" width="320" height="180" autoplay muted playsinline
-            style="max-width:90vw;max-height:90vh;">
-            <source src="img/video/loading.mp4" type="video/mp4">
-            Tu navegador no soporta el video.
-        </video>
-    </div> -->
+        <div style="display:flex;align-items:center;justify-content:center;width:100vw;height:100vh;">
+            <video id="loadingVideo" width="320" height="180" autoplay muted playsinline
+                style="max-width:90vw;max-height:90vh;display:block;margin:auto;">
+                <source src="img/video/loading.mp4" type="video/mp4">
+                Tu navegador no soporta el video.
+            </video>
+        </div>
+    </div>
     <!-- Fin pantalla de carga -->
 
 
@@ -77,11 +77,11 @@
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="./service.html">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="./producciones.html">Servicios</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="./contact.html">Contacto</a>
-                    </li> -->
+                    </li>
                 </ul>
                 <div class="d-flex align-items-center ms-md-3">
                     <a class="btn text-center px-0 mx-1"
@@ -191,7 +191,7 @@
             </div>
             <!-- Card 2 -->
             <div class="col-md-6 col-lg-4 mb-4">
-                <a href="./service.html">
+                <a href="./producciones.html">
                     <div class="custom-card">
                         <div class="custom-card-img-wrapper">
                             <img class="custom-card-img" src="img/service_2.webp" alt="">
