--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Trivium Records - Profesionalmente Apasionados, Musicalmente Efectivos.</title>
+    <title>Trivium Records - Contactanos</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta
         content="Trivium Records, producción musical, academia de música, representación artística, León, Gto, estudio de grabación, clases de música, DJ, eventos, conciertos, sello discográfico, booking, promoción musical, música en vivo, México"
@@ -12,8 +12,8 @@
         content="Trivium Records: producción musical, academia de música y representación artística en León, Gto. Profesionalmente apasionados, musicalmente efectivos."
         name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- Favicon dinámico según modo oscuro o claro -->
+    <link id="favicon" rel="icon" href="img/favicon-light.png" type="image/png">
 
     <!-- Google Fonts: Inter y Alumni Sans SC -->
     <link
@@ -39,6 +39,18 @@
 
 <body class="" style="background: #000;">
 
+    <!-- Pantalla de carga -->
+    <div id="preloader"
+        style="position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:#000;display:flex;align-items:center;justify-content:center;transition:opacity 0.7s cubic-bezier(.4,0,.2,1);opacity:1;">
+        <div style="display:flex;align-items:center;justify-content:center;width:100vw;height:100vh;">
+            <video id="loadingVideo" width="320" height="180" autoplay muted playsinline
+                style="max-width:90vw;max-height:90vh;display:block;margin:auto;">
+                <source src="img/video/loading.mp4" type="video/mp4">
+                Tu navegador no soporta el video.
+            </video>
+        </div>
+    </div>
+    <!-- Fin pantalla de carga -->
 
 
     <!-- Navbar Start -->
@@ -64,23 +76,24 @@
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="./service.html">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="./producciones.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center active m-3" href="./contact.html">Contacto</a>
+                        <a class="nav-link text-white fw-medium text-center active m-3"
+                            href="./contact.html">Contacto</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center ms-md-3">
-                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
-                        style="width: 36px; height: 36px;" href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
+                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                        href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
                         <i class="fab fa-tiktok"></i>
                     </a>
-                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
-                        style="width: 36px; height: 36px;" href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank" rel="noopener">
+                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                        href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank" rel="noopener">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
-                        style="width: 36px; height: 36px;" href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
+                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                        href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
@@ -95,7 +108,7 @@
         <div class="header-section position-relative d-flex align-items-center justify-content-center parallax-header"
             style="
                 height: 340px; 
-                background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url('img/header-2.webp') center center / cover no-repeat;
+                background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url('img/header-4.webp') center center / cover no-repeat;
                 margin-top: 80px; 
                 border-radius: 0 0 2rem 2rem;
                 overflow: hidden;">
@@ -124,41 +137,73 @@
     <!-- Contact Start -->
     <div class="container-fluid pt-5">
         <div class="d-flex flex-column text-center mb-5">
-            <h5 class="text-primary mb-3">Contact Us</h5>
-            <h1 class="m-0">Contact For Any Query</h1>
+            <!-- <h5 class="text-primary mb-3">Contact Us</h5> -->
+            <h2 class="text-white mb-3 display-4">Cuéntanos tu idea, proyecto o inquietud.</h2>
         </div>
         <div class="row">
             <div class="col-12 p-0">
-                <iframe style="width: 100%; height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.984697062435!2d-101.6745738252162!3d21.15300728052756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bbf2ff9dd7e83%3A0xc8ba86735f1289c5!2sBenedicto%20XV%20144%2C%20San%20Jeronimo%20II%2C%2037148%20Le%C3%B3n%20de%20los%20Aldama%2C%20Gto.!5e0!3m2!1ses!2smx!4v1749769998656!5m2!1ses!2smx" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe style="width: 100%; height: 500px;"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.984697062435!2d-101.6745738252162!3d21.15300728052756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bbf2ff9dd7e83%3A0xc8ba86735f1289c5!2sBenedicto%20XV%20144%2C%20San%20Jeronimo%20II%2C%2037148%20Le%C3%B3n%20de%20los%20Aldama%2C%20Gto.!5e0!3m2!1ses!2smx!4v1749769998656!5m2!1ses!2smx"
+                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
             <div class="col-12">
-                <div class="contact-form bg-white">
+                <div class="contact-form"
+                    style="background: #000; border-radius: 20px; padding: 30px; box-shadow: 0 4px 24px rgba(0,0,0,0.1);">
                     <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                        <div class="control-group">
-                            <input type="text" class="form-control" id="name" placeholder="Nombre" required="required" data-validation-required-message="Inserta tu nombre" />
-                            <p class="help-block text-danger"></p>
+                    <form id="contactForm" novalidate>
+                        <input type="hidden" name="access_key" value="ef75c69c-287d-4f60-bdef-c2971ba50819">
+                        <div class="form-group">
+                            <label for="nombre">Nombre *</label>
+                            <input type="text" id="nombre" name="name" required maxlength="60" autocomplete="name">
                         </div>
-                        <div class="control-group">
-                            <input type="email" class="form-control" id="email" placeholder="Correo" required="required" data-validation-required-message="Inserta tu correo" />
-                            <p class="help-block text-danger"></p>
+                        <div class="form-group">
+                            <label for="email">Correo electrónico *</label>
+                            <input type="email" id="email" name="email" required maxlength="80" autocomplete="email">
                         </div>
-                        <div class="control-group">
-                            <input type="text" class="form-control" id="subject" placeholder="Asunto" required="required" data-validation-required-message="Inserta el asunto" />
-                            <p class="help-block text-danger"></p>
+                        <div class="form-group">
+                            <label for="asunto">Asunto *</label>
+                            <input type="text" id="asunto" name="subject" required maxlength="80">
                         </div>
-                        <div class="control-group">
-                            <textarea class="form-control" rows="6" id="message" placeholder="Mensaje" required="required" data-validation-required-message="Inserta tu mensaje"></textarea>
-                            <p class="help-block text-danger"></p>
+                        <div class="form-group">
+                            <label for="mensaje">Mensaje *</label>
+                            <textarea id="mensaje" name="message" required maxlength="1000" rows="5"></textarea>
                         </div>
-                        <div>
-                            <button class="btn btn-primary" type="submit" id="sendMessageButton">Enviar</button>
+                        <!-- Honeypot anti-spam -->
+                        <div style="display: flex; flex-direction: column; align-items: center;">
+                            <input type="text" name="website" id="website" style="display:none;">
+                            <button type="submit" class="btn-enviar" style="margin-top: 16px;">Enviar</button>
                         </div>
                     </form>
+                    <script src="https://web3forms.com/client/script.js" async defer></script>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Modal de éxito -->
+    <div id="modal-exito" class="modal">
+        <div class="modal-content success" style="max-width: 420px; min-width: 320px; padding: 2.2rem 1.5rem;">
+            <span class="modal-icon" style="font-size: 3rem;">&#10003;</span>
+            <h3 class="text-light" style="font-size: 1.6rem;">¡Mensaje enviado!</h3>
+            <p style="font-size: 1.1rem;">Gracias por contactarnos. Te responderemos pronto.</p>
+            <div style="display: flex; justify-content: center;">
+                <button class="btn-cerrar" onclick="cerrarModal()" style="margin-top: 1.2rem;">Cerrar</button>
+            </div>
+        </div>
+    </div>
+    <!-- Modal de error -->
+    <div id="modal-error" class="modal">
+        <div class="modal-content error" style="max-width: 420px; min-width: 320px; padding: 2.2rem 1.5rem;">
+            <span class="modal-icon" style="font-size: 3rem;">&#9888;</span>
+            <h3 class="text-light" style="font-size: 1.6rem;">Error al enviar</h3>
+            <p style="font-size: 1.1rem;">No se pudo enviar tu mensaje. Intenta de nuevo más tarde.</p>
+            <div style="display: flex; justify-content: center;">
+                <button class="btn-cerrar" onclick="cerrarModal()" style="margin-top: 1.2rem;">Cerrar</button>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Contact End -->
 
 
@@ -251,7 +296,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-secondary border back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <!-- <a href="#" class="btn btn-secondary border back-to-top"><i class="fa fa-angle-double-up"></i></a> -->
 
 
     <!-- JavaScript Libraries -->
@@ -263,11 +308,48 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
+    <!-- <script src="mail/jqBootstrapValidation.min.js"></script>
+    <script src="mail/contact.js"></script> -->
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/form.js"></script>
+
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const video = document.getElementById('loadingVideo');
+            const preloader = document.getElementById('preloader');
+            const mainContent = document.getElementById('main-content');
+
+            function hidePreloader() {
+                if (preloader) {
+                    preloader.style.opacity = '0';
+                    setTimeout(() => {
+                        preloader.style.display = 'none';
+                        if (mainContent) mainContent.style.display = '';
+                    }, 700); // Debe coincidir con el tiempo de transición
+                }
+            }
+
+            if (video) {
+                video.addEventListener('ended', hidePreloader);
+            }
+
+            setTimeout(() => {
+                if (preloader && preloader.style.display !== 'none') {
+                    hidePreloader();
+                }
+            }, 7000);
+        });
+    </script>
+
+    <div id="main-content" style="display:none;">
+        <!-- TODO el contenido actual de tu página, desde el navbar hasta el footer -->
+        ...
+    </div>
+
+
 </body>
 
 </html>
