--- a/producciones.html
+++ b/producciones.html
@@ -270,8 +270,6 @@
     <!-- Party Pack End -->
 
 
-
-
     <!-- Conference Start -->
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
@@ -318,7 +316,7 @@
                             <h4 class="card-title text-white text-truncate m-3">Conference Pack 2</h4>
                         </div>
                         <ul>
-                            <li>1 Bocina HK Polar 12 (Capacidad para 150 personas)</li>
+                            <li>2 Bocinas HK Polar 12 (Capacidad para 150 personas)</li>
                             <li>1 Mezcladora de 6 canales</li>
                             <li>2 Microfonos inalambricos y solapa</li>
                             <li>1 Pantalla de 55"</li>
@@ -348,7 +346,7 @@
                             <h4 class="card-title text-white text-truncate m-3">Conference Pack 3</h4>
                         </div>
                         <ul>
-                            <li>2 Bocina HK Polar 12 (Capacidad para 150 personas)</li>
+                            <li>2 Bocinas HK Polar 12 (Capacidad para 150 personas)</li>
                             <li>1 Mezcladora de 12 canales</li>
                             <li>4 Microfonos inalambricos y solapa</li>
                             <li>1 Pantalla de 75"</li>
@@ -378,7 +376,7 @@
                             <h4 class="card-title text-white text-truncate m-3">Conference Pack 4</h4>
                         </div>
                         <ul>
-                            <li>4 Bocina HK Polar 12 (Capacidad para 300 personas)</li>
+                            <li>4 Bocinas HK Polar 12 (Capacidad para 300 personas)</li>
                             <li>1 Mezcladora de 12 canales</li>
                             <li>4 Microfonos inalambricos y solapa</li>
                             <li>2 Pantalla de 75"</li>
@@ -408,7 +406,7 @@
                             <h4 class="card-title text-white text-truncate m-3">Mega Conference Pack</h4>
                         </div>
                         <ul>
-                            <li>10 Bocina HK Polar 12 (Capacidad para 1500 personas)</li>
+                            <li>10 Bocinas HK Polar 12 (Capacidad para 1500 personas)</li>
                             <li>2 Subwoofers 8006 RCF</li>
                             <li>1 Consola SQ-5</li>
                             <li>4 Microfonos inalambricos</li>
