--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- TU CSS PERSONALIZADO SIEMPRE AL FINAL -->
+    <!-- CSS  -->
     <link rel="stylesheet" href="css/style.css">
+    
 
 </head>
 
-<body class="" style="background: #000000;">
+<body style="background: #000000;">
+
+    
 
     <!-- Pantalla de carga -->
     <div id="preloader"
