--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
     <div class="container-fluid pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <!-- <h5 class="text-primary mb-3">Contact Us</h5> -->
-            <h2 class="text-white mb-3 display-4">Cuéntanos tu idea, proyecto o inquietud.</h2>
+            <h2 class="text-white mb-3 display-4">Cuéntanos tu idea</h2>
         </div>
         <div class="row">
             <div class="col-12 p-0">
@@ -239,14 +239,17 @@
                         <h5 class="text-white mb-3">Contactanos</h5>
                         <div class="row">
                             <div class="col-md-4">
-                                <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León,
-                                    Gto. Mex</p>
+                                <a href="https://maps.app.goo.gl/v9z85kVo8VoGkvMp7" target="_blank" rel="noopener">
+                                    <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León, Gto. Mex</p>
+                                </a>
                             </div>
                             <div class="col-md-4">
-                                <p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p>
+                                <a href=""><p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p></a>
                             </div>
                             <div class="col-md-4">
-                                <p><i class="fa fa-envelope mx-2"></i>contacto@triviumrecords.com.mx</p>
+                                <a href="mailto:contacto@triviumrecords.com.mx">
+                                    <p><i class="fa fa-envelope mx-2"></i>contacto@triviumrecords.com.mx</p>
+                                </a>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center mt-4 my-4 gap-2">
