--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="pl-4">
-                            <h4 class="text-primary">Dania y Roberto</h4>
+                            <h4 class="" style="color: #f2af13;">Dania y Roberto</h4>
                             <p class="m-0">Servicio Trivium Produccion</p>
                         </div>
                     </div>
@@ -305,7 +305,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="pl-4">
-                            <h4 class="text-primary">Fernando y Geraldine</h4>
+                            <h4 class="" style="color: #f2af13;">Fernando y Geraldine</h4>
                             <p class="m-0">Servicio Trivium Produccion</p>
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="pl-4">
-                            <h4 class="text-primary">Pau y Jorge</h4>
+                            <h4 class="" style="color: #f2af13;">Pau y Jorge</h4>
                             <p class="m-0">Servicio Trivium Produccion</p>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="pl-4">
-                            <h4 class="text-primary">Oscar, Tenor</h4>
+                            <h4 class="" style="color: #f2af13;">Oscar, Tenor</h4>
                             <p class="m-0">Servicio Trivium Academia</p>
                         </div>
                     </div>
@@ -344,7 +344,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="pl-4">
-                            <h4 class="text-primary">Olivia, Alto</h4>
+                            <h4 class="" style="color: #f2af13;">Olivia, Alto</h4>
                             <p class="m-0">Servicio Trivium Academia</p>
                         </div>
                     </div>
@@ -357,7 +357,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="pl-4">
-                            <h4 class="text-primary">Julio, Bajo</h4>
+                            <h4 class="" style="color: #f2af13;">Julio, Bajo</h4>
                             <p class="m-0">Servicio Trivium Academia</p>
                         </div>
                     </div>
@@ -400,14 +400,17 @@
                         <h5 class="text-white mb-3">Contactanos</h5>
                         <div class="row">
                             <div class="col-md-4">
-                                <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León,
-                                    Gto. Mex</p>
+                                <a href="https://maps.app.goo.gl/v9z85kVo8VoGkvMp7" target="_blank" rel="noopener">
+                                    <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León, Gto. Mex</p>
+                                </a>
                             </div>
                             <div class="col-md-4">
-                                <p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p>
+                                <a href=""><p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p></a>
                             </div>
                             <div class="col-md-4">
-                                <p><i class="fa fa-envelope mx-2"></i>contacto@triviumrecords.com.mx</p>
+                                <a href="mailto:contacto@triviumrecords.com.mx">
+                                    <p><i class="fa fa-envelope mx-2"></i>contacto@triviumrecords.com.mx</p>
+                                </a>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center mt-4 my-4 gap-2">
