--- a/producciones.html
+++ b/producciones.html
@@ -406,7 +406,7 @@
                             <h4 class="card-title text-white text-truncate m-3">Mega Conference Pack</h4>
                         </div>
                         <ul>
-                            <li>10 Bocinas HK Polar 12 (Capacidad para 1500 personas)</li>
+                            <li>10 Medios hdl-10 RCF (Capacidad para 1500 personas)</li>
                             <li>2 Subwoofers 8006 RCF</li>
                             <li>1 Consola SQ-5</li>
                             <li>4 Microfonos inalambricos</li>
@@ -536,14 +536,17 @@
                         <h5 class="text-white mb-3">Contactanos</h5>
                         <div class="row">
                             <div class="col-md-4">
-                                <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León,
-                                    Gto. Mex</p>
+                                <a href="https://maps.app.goo.gl/v9z85kVo8VoGkvMp7" target="_blank" rel="noopener">
+                                    <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León, Gto. Mex</p>
+                                </a>
                             </div>
                             <div class="col-md-4">
-                                <p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p>
+                                <a href=""><p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p></a>
                             </div>
                             <div class="col-md-4">
-                                <p><i class="fa fa-envelope mx-2"></i>contacto@triviumrecords.com.mx</p>
+                                <a href="mailto:contacto@triviumrecords.com.mx">
+                                    <p><i class="fa fa-envelope mx-2"></i>contacto@triviumrecords.com.mx</p>
+                                </a>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center mt-4 my-4 gap-2">
