--- a/index.html
+++ b/index.html
@@ -405,7 +405,9 @@
                                 </a>
                             </div>
                             <div class="col-md-4">
-                                <a href=""><p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p></a>
+                                <a href="https://wa.me/524731370884" target="_blank" rel="noopener">
+                                    <p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p>
+                                </a>
                             </div>
                             <div class="col-md-4">
                                 <a href="mailto:contacto@triviumrecords.com.mx">
