--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="./producciones.html">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="servicios/">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="./contact.html">Contacto</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="contacto/">Contacto</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center ms-md-3">
