--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
 
     <!-- Pantalla de carga -->
-    <div id="preloader"
+    <!-- <div id="preloader"
         style="position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:#000;display:flex;align-items:center;justify-content:center;transition:opacity 0.7s cubic-bezier(.4,0,.2,1);opacity:1;">
         <div style="display:flex;align-items:center;justify-content:center;width:100vw;height:100vh;">
             <video id="loadingVideo" width="320" height="180" autoplay muted playsinline
@@ -53,7 +53,7 @@
                 Tu navegador no soporta el video.
             </video>
         </div>
-    </div>
+    </div> -->
     <!-- Fin pantalla de carga -->
 
 
@@ -246,34 +246,42 @@
     <!-- Subscribe End -->
 
     <!-- Facts Start -->
-    <!-- <div class="container-fluid bg-primary my-5 py-5 text-center">
+    <div class="container-fluid my-5 py-5 text-center" style="background: #ff00ea2d;">
         <div class="row pt-5">
             <div class="col-lg-3 col-sm-6 mb-5">
-                <h5 class="fa fa-user-shield mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
-                    style="width: 50px; height: 50px;"></h5>
-                <h4 class="display-4 text-white mb-3" data-toggle="counter-up">250</h4>
-                <h6 class="text-white m-0">Our Staff</h6>
+                <!-- <h5 class="fa fa-user-shield mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
+                    style="width: 50px; height: 50px;"></h5> -->
+                <h4 class="display-4 text-white mb-3">
+                  <span class="plus">+</span><span data-toggle="counter-up">5</span>
+                </h4>
+                <h3 class="text-white mb-3">Años de experiencia</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
-                <h5 class="fa fa-users mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
-                    style="width: 50px; height: 50px;"></h5>
-                <h4 class="display-4 text-white mb-3" data-toggle="counter-up">1500</h4>
-                <h6 class="text-white m-0">Happy Client</h6>
+                <!-- <h5 class="fa fa-users mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
+                    style="width: 50px; height: 50px;"></h5> -->
+                <h4 class="display-4 text-white mb-3">
+                  <span class="plus">+</span><span data-toggle="counter-up">100</span>
+                </h4>
+                <h3 class="text-white mb-3">Eventos</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
-                <h5 class="fa fa-shield-alt mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
-                    style="width: 50px; height: 50px;"></h5>
-                <h4 class="display-4 text-white mb-3" data-toggle="counter-up">10000</h4>
-                <h6 class="text-white m-0">Project Complete</h6>
+                <!-- <h5 class="fa fa-shield-alt mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
+                    style="width: 50px; height: 50px;"></h5> -->
+                <h4 class="display-4 text-white mb-3">
+                  <span class="plus">+</span><span data-toggle="counter-up">10</span>
+                </h4>
+                <h3 class="text-white mb-3">Años de profesorado</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
-                <h5 class="fa fa-award mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
-                    style="width: 50px; height: 50px;"></h5>
-                <h4 class="display-4 text-white mb-3" data-toggle="counter-up">25</h4>
-                <h6 class="text-white m-0">Award Winning</h6>
+                <!-- <h5 class="fa fa-award mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
+                    style="width: 50px; height: 50px;"></h5> -->
+                <h4 class="display-4 text-white mb-3">
+                  <span class="plus">+</span><span data-toggle="counter-up">50</span>
+                </h4>
+                <h3 class="text-white mb-3">Colaboraciones con artistas</h3>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- Facts End -->
 
 
@@ -362,6 +370,33 @@
                         </div>
                     </div>
                 </div>
+                <!-- Testimonio Rock Star -->
+                <div class="rock-testimonial">
+                    <div class="rock-testimonial-header">
+                        <span class="rock-icon">&#9889;</span> <!-- Rayo estilo rock -->
+                        <span class="rock-name">Juan Pérez</span>
+                        <span class="rock-role">Vocalista, BlackStone</span>
+                    </div>
+                    <div class="rock-testimonial-body">
+                        <p>
+                          “¡La experiencia con Trivium Records fue brutal! El sonido, la vibra y la profesionalidad nos hicieron sentir como verdaderas estrellas del rock.”
+                        </p>
+                    </div>
+                </div>
+                <!-- Testimonio Rock Star -->
+                <div class="rock-testimonial">
+                    <div class="rock-testimonial-header">
+                        <span class="rock-icon">&#9889;</span> <!-- Rayo estilo rock -->
+                        <span class="rock-name">Juan Pérez</span>
+                        <span class="rock-role">Vocalista, BlackStone</span>
+                    </div>
+                    <div class="rock-testimonial-body">
+                        <p>
+                          “¡La experiencia con Trivium Records fue brutal! El sonido, la vibra y la profesionalidad nos hicieron sentir como verdaderas estrellas del rock.”
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
