--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <h4 class="display-4 text-dark mb-3">
                   <span class="plus">+</span><span data-toggle="counter-up">7</span>
                 </h4>
-                <h3 class="text-dark mb-3">Años de experiencia</h3>
+                <h3 class="text-dark mb-3">Años de experiencia en la música</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
                 <!-- <h5 class="fa fa-users mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
@@ -262,15 +262,15 @@
                 <h4 class="display-4 text-dark mb-3">
                   <span class="plus">+</span><span data-toggle="counter-up">100</span>
                 </h4>
-                <h3 class="text-dark mb-3">Eventos</h3>
+                <h3 class="text-dark mb-3">Eventos producidos</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
                 <!-- <h5 class="fa fa-shield-alt mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
                     style="width: 50px; height: 50px;"></h5> -->
                 <h4 class="display-4 text-dark mb-3">
-                  <span class="plus">+</span><span data-toggle="counter-up">10</span>
+                  <span class="plus">+</span><span data-toggle="counter-up">5</span>
                 </h4>
-                <h3 class="text-dark mb-3">Años de profesorado</h3>
+                <h3 class="text-dark mb-3">Años preparando artistas</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
                 <!-- <h5 class="fa fa-award mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
@@ -278,7 +278,7 @@
                 <h4 class="display-4 text-dark mb-3">
                   <span class="plus">+</span><span data-toggle="counter-up">50</span>
                 </h4>
-                <h3 class="text-dark mb-3">Colaboraciones con artistas</h3>
+                <h3 class="text-dark mb-3">Colaboraciones con artistas nacionales e internacionales</h3>
             </div>
         </div>
     </div>
