--- a/servicios/index.html
+++ b/servicios/index.html
@@ -33,6 +33,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+
     <!-- TU CSS PERSONALIZADO SIEMPRE AL FINAL -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -76,23 +79,24 @@
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center active m-3" href="../servicios/">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center active m-3"
+                            href="../servicios/">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="../contacto/">Contacto</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center ms-md-3">
-                    <a class="btn text-center px-0 mx-1"
-                        style="width: 36px; height: 36px;" href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
+                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                        href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
                         <i class="fab fa-tiktok"></i>
                     </a>
-                    <a class="btn text-center px-0 mx-1"
-                        style="width: 36px; height: 36px;" href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank" rel="noopener">
+                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                        href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank" rel="noopener">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="btn text-center px-0 mx-1"
-                        style="width: 36px; height: 36px;" href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
+                    <a class="btn text-center px-0 mx-1" style="width: 36px; height: 36px;"
+                        href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
@@ -133,10 +137,9 @@
     <!-- Header End -->
 
 
-
     <!-- Facts Start -->
-    <div class="container-fluid my-5 py-5 text-center parallax-facts" 
-        style="background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('../img/header-3.webp') center center / cover no-repeat; background-attachment: fixed; border-radius: 2rem;">
+    <div class="container-fluid my-5 py-5 text-center parallax-facts"
+        style="background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('../img/header-3.webp') center center / cover no-repeat; background-attachment: fixed; border-radius: 2rem;" >
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Personaliza tu Paquete</h2>
             <p class="text-white mb-0"></p>
@@ -169,10 +172,12 @@
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Party</h2>
-            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada hora excedida."</p>
+            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En
+                caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada
+                hora excedida."</p>
         </div>
         <div class="row pb-3 justify-content-center">
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="../img/pack_party_1.webp" alt="">
@@ -201,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="../img/pack_party_2.webp" alt="">
@@ -233,7 +238,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="../img/pack_party_3.webp" alt="">
@@ -274,9 +279,11 @@
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Conference</h2>
-            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada hora excedida."</p>
+            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En
+                caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada
+                hora excedida."</p>
         </div>
-        <div class="row pb-3 justify-content-center">
+        <div class="row pb-3 justify-content-center" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
@@ -306,7 +313,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="../img/pack_conf_2.webp" alt="">
@@ -336,7 +343,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="../img/pack_conf_4.webp" alt="">
@@ -366,7 +373,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="../img/pack_conf_3.webp" alt="">
@@ -396,7 +403,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="../img/pack_conf_mega.webp" alt="">
@@ -537,7 +544,8 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <a href="https://maps.app.goo.gl/v9z85kVo8VoGkvMp7" target="_blank" rel="noopener">
-                                    <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León, Gto. Mex</p>
+                                    <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II,
+                                        León, Gto. Mex</p>
                                 </a>
                             </div>
                             <div class="col-md-4">
@@ -642,6 +650,12 @@
                 }
             }, 7000);
         });
+    </script>
+
+    <!-- AOS -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 
     <div id="main-content" style="display:none;">
