--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
             <!-- Card 2 -->
             <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000" data-aos-once="true">
-                <a href="./producciones.html">
+                <a href="servicios/">
                     <div class="custom-card">
                         <div class="custom-card-img-wrapper">
                             <img class="custom-card-img" src="img/service_2.webp" alt="">
