--- a/servicios/index.html
+++ b/servicios/index.html
@@ -153,7 +153,7 @@
                     y backline para shows en vivo.
                     Contamos con equipos de última generación y personal técnico especializado para crear experiencias
                     memorables en León, Querétaro y todo el Bajío.</p>
-                <a href="/servicios/eventos/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
+                <a href="/eventos/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
                     data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Ver Más</a>
             </div>
         </div>
@@ -179,7 +179,7 @@
                     graduaciones y bodas—en una experiencia vibrante, con música seleccionada para cada estilo y
                     momento.
                 </p>
-                <a href="/servicios/artistas/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
+                <a href="/artistas/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
                     data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Ver Más</a>
             </div>
             <div class="col-lg-6 px-0 order-1 order-lg-2 d-flex justify-content-end">
