--- a/contacto/index.html
+++ b/contacto/index.html
@@ -76,7 +76,7 @@
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="../servicios/">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="../#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center active m-3"
