--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center m-3" href="servicios/">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="contacto/">Contacto</a>
@@ -142,24 +142,29 @@
                 <img width="100%" class="img-fluid" src="img/about.jpeg" alt="Image">
             </div>
             <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5">
-                <h3 class="text-white mb-3" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Sobre nosotros</h3>
+                <h3 class="text-white mb-3" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
+                    data-aos-once="true">Sobre nosotros</h3>
                 <!-- <h1 class="mb-4">15 Years Experience</h1> -->
-                <p class="text-white" style="text-align: justify;" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Trivium Records es una empresa dedicada a la
+                <p class="text-white" style="text-align: justify;" data-aos="fade-up" data-aos-delay="100"
+                    data-aos-duration="1000" data-aos-once="true">Trivium Records es una empresa dedicada a la
                     producción, enseñanza y representación musical en todos los aspectos. Tiene como objetivo brindar
                     servicios y productos de calidad a quienes quieren llevar sus producciones, su nivel música a su
                     carrera profesional a nuevos horizontes</p>
                 <div class="row py-4 justify-content-center text-center">
-                    <div class="col-sm-3 text-center mb-4 px-2" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
+                    <div class="col-sm-3 text-center mb-4 px-2" data-aos="fade-up" data-aos-delay="300"
+                        data-aos-duration="1000" data-aos-once="true">
                         <img src="img/Trivium_producciones.png" alt="Trivium Producciones" class="mb-4"
                             style="height:170px; filter: brightness(0) invert(1);">
                         <!-- <h5 class="mt-2 text-white">Trivium Producciones</h5> -->
                     </div>
-                    <div class="col-sm-3 text-center mb-4 px-2" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true">
+                    <div class="col-sm-3 text-center mb-4 px-2" data-aos="fade-up" data-aos-delay="500"
+                        data-aos-duration="1000" data-aos-once="true">
                         <img src="img/Trivium_academia.png" alt="Trivium Academia" class="mb-4"
                             style="height:170px; filter: brightness(0) invert(1);">
                         <!-- <h5 class="mt-2 text-white">Trivium Academia</h5> -->
                     </div>
-                    <div class="col-sm-3 text-center mb-4 px-2" data-aos="fade-up" data-aos-delay="700" data-aos-duration="1000" data-aos-once="true">
+                    <div class="col-sm-3 text-center mb-4 px-2" data-aos="fade-up" data-aos-delay="700"
+                        data-aos-duration="1000" data-aos-once="true">
                         <img src="img/Trivium_label.png" alt="Trivium Label" class="mb-4"
                             style="height:170px; filter: brightness(0) invert(1);">
                         <!-- <h5 class="mt-2 text-white">Trivium Label</h5> -->
@@ -173,31 +178,36 @@
 
 
     <!-- Services Start -->
-    <div class="container pt-5" style="background: #000000;">
+    <div id="servicios" class="container pt-5" style="background: #000000;">
         <div class="d-flex flex-column text-center mb-5">
-            <h3 class="text-white mb-3 display-6" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Nuestros Servicios</h3>
+            <h3 class="text-white mb-3 display-6" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
+                data-aos-once="true">Nuestros Servicios</h3>
         </div>
         <div class="row pb-3 justify-content-center">
             <!-- Card 1 -->
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true">
-                <div class="custom-card">
-                    <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_1.webp" alt="">
-                    </div>
-                    <div class="custom-card-content">
-                        <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-0">Trivium Academia</h4>
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000"
+                data-aos-once="true">
+                <a href="servicios/academia/">
+                    <div class="custom-card">
+                        <div class="custom-card-img-wrapper">
+                            <img class="custom-card-img" src="img/service_1.webp" alt="">
                         </div>
-                        <p>Un espacio académico para la enseñanza de música (piano, canto, DJ) enfocado hacia el
-                            perfeccionamiento musical.</p>
-                        <p>Clases teóricas y prácticas impartidas por maestros con experiencia vasta en la música.
-                        </p>
+                        <div class="custom-card-content">
+                            <div class="d-flex justify-content-center align-items-center mb-2">
+                                <h4 class="card-title text-white text-truncate m-0">Trivium Academia</h4>
+                            </div>
+                            <p class="text-pack">Un espacio académico para la enseñanza de música (piano, canto, DJ) enfocado hacia el
+                                perfeccionamiento musical.</p>
+                            <p class="text-pack">Clases teóricas y prácticas impartidas por maestros con experiencia vasta en la música.
+                            </p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <!-- Card 2 -->
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000" data-aos-once="true">
-                <a href="servicios/">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000"
+                data-aos-once="true">
+                <a href="servicios/producciones/">
                     <div class="custom-card">
                         <div class="custom-card-img-wrapper">
                             <img class="custom-card-img" src="img/service_2.webp" alt="">
@@ -216,7 +226,8 @@
                 </a>
             </div>
             <!-- Card 3 -->
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000" data-aos-once="true">
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000"
+                data-aos-once="true">
                 <div class="custom-card">
                     <div class="custom-card-img-wrapper">
                         <img class="custom-card-img" src="img/service_3.webp" alt="">
@@ -253,25 +264,29 @@
     <!-- Facts Start -->
     <div class="container-fluid my-5 py-5 text-center" style="background: #f2af13;">
         <div class="row pt-5">
-            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true">
+            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000"
+                data-aos-once="true">
                 <h4 class="display-4 text-dark mb-3">
                     <span class="plus">+</span><span data-toggle="counter-up">7</span>
                 </h4>
                 <h3 class="text-dark mb-3">Años de experiencia en la música</h3>
             </div>
-            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true">
+            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000"
+                data-aos-once="true">
                 <h4 class="display-4 text-dark mb-3">
                     <span class="plus">+</span><span data-toggle="counter-up">100</span>
                 </h4>
                 <h3 class="text-dark mb-3">Eventos producidos</h3>
             </div>
-            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000" data-aos-once="true">
+            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000"
+                data-aos-once="true">
                 <h4 class="display-4 text-dark mb-3">
                     <span class="plus">+</span><span data-toggle="counter-up">5</span>
                 </h4>
                 <h3 class="text-dark mb-3">Años preparando artistas</h3>
             </div>
-            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000" data-aos-once="true">
+            <div class="col-lg-3 col-sm-6 mb-5" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000"
+                data-aos-once="true">
                 <!-- <h5 class="fa fa-award mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
                     style="width: 50px; height: 50px;"></h5> -->
                 <h4 class="display-4 text-dark mb-3">
@@ -287,10 +302,12 @@
     <!-- Testimonial Start -->
     <div class="container-fluid my-5 p-0 py-3">
         <div class="container p-0 py-5">
-            <div class="d-flex flex-column text-center mb-5" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true">
+            <div class="d-flex flex-column text-center mb-5" data-aos="fade-up" data-aos-delay="200"
+                data-aos-duration="1000" data-aos-once="true">
                 <h3 class="text-white mb-3 display-6">Testimonial</h3>
             </div>
-            <div class="owl-carousel testimonial-carousel" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true">
+            <div class="owl-carousel testimonial-carousel" data-aos="fade-up" data-aos-delay="400"
+                data-aos-duration="1000" data-aos-once="true">
                 <!-- Testimonio 1 -->
                 <div class="rock-testimonial mx-2">
                     <div class="rock-testimonial-body">
