--- a/servicios/academia/index.html
+++ b/servicios/academia/index.html
@@ -43,7 +43,7 @@
 <body style="background: #000000;">
 
     <!-- Pantalla de carga -->
-    <!-- <div id="preloader"
+    <div id="preloader"
         style="position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:#000;display:flex;align-items:center;justify-content:center;transition:opacity 0.7s cubic-bezier(.4,0,.2,1);opacity:1;">
         <div style="display:flex;align-items:center;justify-content:center;width:100vw;height:100vh;">
             <video id="loadingVideo" width="320" height="180" autoplay muted playsinline
@@ -52,7 +52,7 @@
                 Tu navegador no soporta el video.
             </video>
         </div>
-    </div> -->
+    </div>
     <!-- Fin pantalla de carga -->
 
 
